fixed #7 #2 #20
