# app/Http/Controllers/CompaniesController.php
@@ -3,6 +3,8 @@
 namespace App\Http\Controllers;
 
 use App\Company;
+use App\Http\Requests\CompanyRequest;
+use App\Http\Requests\UpdateCompanyRequest;
 use App\Jobs\CreateDraftResponseForCompanyJob;
 use App\Services\CompanyService;
 use App\Http\Requests\User\CreateUserRequest;
@@ -68,9 +70,51 @@ class CompaniesController extends Controller
      *
      * )
      */
-    public function get(Company $company)
+    public function get(CompanyRequest $companyRequest)
     {
-        return $this->response->item($company,  (new CompanyTransformer())->addRegions()->addSpheres());
+        return $this->response->item($companyRequest->getCompany(),
+            (new CompanyTransformer())->addRegions()->addSpheres());
+    }
+
+
+    /**
+     * @SWG\Patch(
+     *     path="/companies/{id}",
+     *     summary="Update company",
+     *     tags={"company"},
+     *     description="",
+     *     operationId="updateCompanies",
+     *     @SWG\Parameter(name="id", in="path", required=true, type="integer"),
+     *     @SWG\Parameter(
+     *          name="Response",
+     *          in="body",
+     *          @SWG\Schema(ref="#/definitions/UpdateCompanyRequest")
+     *      ),
+     *     @SWG\Response(
+     *         response=202,
+     *         description="successful operation",
+     *     ),
+     *     @SWG\Response(
+     *         response=404,
+     *         ref="#/responses/NotFoundResponse"
+     *     ),
+     *     @SWG\Response(
+     *         response=401,
+     *         ref="#/responses/NotAuthResponse"
+     *     ),
+     *     @SWG\Response(
+     *         response="default",
+     *         ref="#/responses/DefaultErrorResponse"
+     *     ),
+     *
+     *     security={{ "token": {} }}
+     * )
+     */
+    public function update(UpdateCompanyRequest $request)
+    {
+        $this->companyService->changeItem($request->getCompany(), $request);
+        return $this->response->accepted();
+
     }
 
 }
