# app/Http/Requests/CompanyRequest.php
@@ -2,32 +2,42 @@
 /**
  * Created by PhpStorm.
  * User: kirya
- * Date: 18.09.16
- * Time: 12:50
+ * Date: 10.07.17
+ * Time: 10:07
  */
 
 namespace App\Http\Requests;
 
-use App\Demand\Invoice;
-use App\Services\InvoiceService;
-use Illuminate\Http\Request;
+use App\Company;
+use App\Services\CompanyService;
 use Symfony\Component\HttpKernel\Exception\NotFoundHttpException;
 
-class UpdateInvoiceRequest extends ApiRequest
+
+/**
+ *
+ *
+ *
+ * Class UpdateCompanyRequest
+ * @package App\Http\Requests
+ *
+ *
+ */
+class CompanyRequest extends ApiRequest
 {
+
     /**
-     * @var Invoice
+     * @var Company
      */
     private $item;
 
     /**
-     * @var InvoiceService
+     * @var CompanyService
      */
-    private $invoiceService;
+    private $service;
 
     public function __construct(array $query = array(), array $request = array(), array $attributes = array(), array $cookies = array(), array $files = array(), array $server = array(), $content = null)
     {
-        $this->invoiceService = new InvoiceService();
+        $this->service = new CompanyService();
         parent::__construct($query, $request, $attributes, $cookies, $files, $server, $content); // TODO: Change the autogenerated stub
     }
 
@@ -39,7 +49,7 @@ class UpdateInvoiceRequest extends ApiRequest
      */
     public function authorize()
     {
-        return $this->user()->can('update', $this->getInvoice());
+        return $this->user()->can('update', $this->getCompany());
     }
 
     /**
@@ -49,26 +59,22 @@ class UpdateInvoiceRequest extends ApiRequest
      */
     public function rules()
     {
-        $rules = ['file' => 'file'];
-        if (env('APP_ENV') != 'testing') {
-            $rules['file'] .= '|mimes:csv,xls,doc,docm,pdf,xlsx';
-        }
-        return $rules;
+        return [
+        ];
     }
 
     /**
-     * @return Invoice
+     * @return Company
      */
-    public function getInvoice()
+    public function getCompany()
     {
         if (!isset($this->item)) {
-            $this->item = $this->invoiceService->findItem((int)$this->route('id'));
+            $this->item = $this->service->findItem((int)$this->route('id'));
             if (!isset($this->item)) {
                 throw new NotFoundHttpException('Not found item');
             }
         }
         return $this->item;
     }
-
 
 }
